fluent-syntax/test/fixtures_behavior/attribute_with_empty_pattern.ftl
key = Value
    .label =
//~ ERROR E0012, pos 24
